Prepare for Render deployment

--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="React single page application"
+      content="Poker Home Game Manager - Organize and manage your poker games with ease"
     />
-    <title>React SPA</title>
+    <title>Poker Home Game Manager</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
